CSS fixes for overflow scrolling

--- a/css/cluster.css
+++ b/css/cluster.css
@@ -1,15 +1,20 @@
 .node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 2px;
+	fill: #fff;
+	stroke: steelblue;
+	stroke-width: 2px;
 }
 
 .node {
-  font: 12px sans-serif;
+	font: 12px sans-serif;
 }
 
 .link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
+	fill: none;
+	stroke: #ccc;
+	stroke-width: 1.5px;
+}
+
+.text-anchor {
+	overflow: visible;
+	text-align: left;
 }
