--- a/css/jit-base.css
+++ b/css/jit-base.css
@@ -17,7 +17,7 @@ h4 {
 #container {
     width: 1000px;
     height: 700px;
-    margin:0 auto;
+    margin: 0;
     position:relative;
 }
 
